--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Prepare to be amazed by these sweet GIFS!!!</h1>
+      <p>Wow...!!!</p>
+    </div>
+    <div class="form-group">
+      <label for="keyword">Enter Keyword!</label>
+      <input type="text" class="form-control" id="keyword">
+    </div>
+    <div class="btns">
+      <button id="search" type="submit">Show me a gif!</button></button>
+    </div>
+    <div class="show"></div>
+  </div>
   
 </body>
 </html>
