Add search gif api call and display first gif
Co-authored-by: Isaacrmoreno <ipdxcreative@gmail.com>
Co-authored-by: Maxwell Meyer <maxreadswell@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
       <input type="text" class="form-control" id="keyword">
     </div>
     <div class="btns">
-      <button id="search" type="submit">Show me a gif!</button></button>
+      <button id="search" type="button">Show me a gif!</button></button>
     </div>
-    <div class="show"></div>
+    <div class="show">
+      <p>HERES A GIF!</p>
+    </div>
   </div>
   
 </body>
