--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
       <input type="text" class="form-control" id="keyword">
     </div>
     <div class="btns">
-      <button id="search" type="button">Show me a gif!</button></button>
+      <button id="search" type="button">Show me a gif!</button>
+      <button id="randsearch" type="button">Show me a RANDOM gif!</button>
     </div>
     <div class="show">
       <p>HERES A GIF!</p>
