--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
       <label for="keyword">Enter Keyword!</label>
       <input type="text" class="form-control" id="keyword">
     </div>
-    <div class="btns">
-      <button id="search" type="button">Show me a gif!</button>
-      <button id="randsearch" type="button">Show me a RANDOM gif!</button>
+    <div id="btns">
+      <button id="search" value="search" type="button">SEARCH</button>
+      <button id="random" value="random" type="button">RANDOM</button>
+      <button id="trending" value="trending" type="button">TRENDING</button> 
     </div>
     <div class="show">
       <p>HERES A GIF!</p>
